# zkboost

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  kurtosis.yml  openapi.json  release-please-config.json  test_workflow.sh
.github/workflows/: build-image.yml  docker-ci.yml  integration-test.yml  release-please.yml  test.yml  unit-test.yml
client/: Cargo.toml
client/src/: main.rs
crates/api/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: client.rs  error.rs  lib.rs
crates/execution-witness-sentry/: Cargo.toml  config.toml
crates/execution-witness-sentry/src/: cl_subscription.rs  config.rs  el_subscription.rs  error.rs  lib.rs  main.rs  rpc.rs  service.rs  storage.rs  subscription.rs  util.rs
crates/execution-witness-sentry/src/service/: backfill.rs  cl_event.rs  el_data.rs  el_event.rs  mod.rs  proof.rs
crates/execution-witness-sentry/tests/: cl_subscription.rs
crates/guest-loader/src/: lib.rs  main.rs
crates/mock-zkattestor/: Cargo.toml
crates/mock-zkattestor/src/: cl_client.rs  main.rs
crates/poost-core/: Cargo.toml
crates/poost-core/src/: common.rs  config.rs  info.rs  lib.rs  mock_zkvm.rs  program.rs
crates/poost-core/src/primitives/: execute.rs  info.rs  mod.rs  prove.rs  verify.rs
crates/poost-server/: Cargo.toml
crates/poost-server/src/: app_state.rs  lib.rs  server.rs
crates/poost-server/src/handlers/: mod.rs  prove.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  config.rs  dashboard.rs  el_client.rs  http.rs  lib.rs  main.rs  metrics.rs  otel.rs  proof.rs  server.rs  witness.rs
crates/server/src/app/: execute.rs  info.rs  prove.rs  verify.rs
crates/server/src/config/: program.rs
crates/server/src/endpoints/: info.rs  prove.rs  verify.rs
crates/server/src/http/: dashboard.rs  v1.rs
crates/server/src/http/dashboard/: index.html
crates/server/src/http/v1/: get_execution_proof_requests.rs  get_execution_proofs.rs  get_proof_types.rs  post_execution_proof_requests.rs  post_execution_proof_verifications.rs
crates/server/src/proof/: input.rs  verifier.rs  worker.rs  zkvm.rs
crates/server/tests/: integration.rs
crates/server/tests/fixture/: chain_config.json  execution_witness.json  new_payload_request.ssz
crates/server/tests/stateless_validator/: config.rs  main.rs  util.rs  witness.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  new_payload_request.rs  proof_type.rs
crates/zkboost-ethereum/el-config/: Cargo.toml
crates/zkboost-ethereum/el-config/src/: lib.rs  main.rs  program.rs
crates/zkboost-ethereum/el-input/: Cargo.toml
crates/zkboost-ethereum/el-input/src/: lib.rs
crates/zkboost-ethereum/el-relayer/: Cargo.toml
crates/zkboost-ethereum/el-relayer/src/: main.rs
crates/zkboost-ethereum/el-types/: Cargo.toml  build.rs
crates/zkboost-ethereum/el-types/src/: el_kind.rs  el_proof_type.rs  lib.rs
crates/zkboost-ethereum/el-witness/: Cargo.toml
crates/zkboost-ethereum/el-witness/src/: lib.rs
crates/zkboost/client/: Cargo.toml
crates/zkboost/client/src/: lib.rs
crates/zkboost/guest-loader/: Cargo.toml
crates/zkboost/guest-loader/src/: lib.rs  main.rs
crates/zkboost/guest-loader/tests/: cli.rs
crates/zkboost/server/: Cargo.toml
crates/zkboost/server-config/: Cargo.toml
crates/zkboost/server-config/src/: config.rs  lib.rs  minisig.rs
crates/zkboost/server-config/src/config/: program.rs
crates/zkboost/server/src/: app.rs  http_service.rs  main.rs  metrics.rs  mock.rs  proof_service.rs  zkvm.rs
crates/zkboost/server/src/app/: execute.rs  prove.rs  verify.rs
crates/zkboost/server/src/http_service/: execute.rs  info.rs  prove.rs  verify.rs
crates/zkboost/server/src/zkvm/: mock.rs
crates/zkboost/server/tests/stateless_validator/: main.rs  utils.rs  witness.rs
crates/zkboost/server/tests/stateless_validator/fixtures/: empty_block.json
crates/zkboost/types/src/: lib.rs
docker/: Dockerfile  Dockerfile.ews  Dockerfile.execution-witness-sentry  Dockerfile.zkboost-server  config.toml  docker-compose.yml
docker/example/mock-zkattestor/: docker-compose.yml  network_params.yaml
docker/example/mock-zkattestor/config/: zkboost-server.toml
docker/example/mock-zkattestor/zkboost/: config.toml
docker/example/mocknet/: docker-compose.yml
docker/example/mocknet/config/: execution-witness-sentry.toml  zkboost-server.toml
docker/example/observability/: config.toml  docker-compose.yml  network_params.yaml
docker/example/observability/grafana/dashboards/: zkboost.json
docker/example/observability/prometheus/: prometheus.yml
docker/example/observability/tempo/: tempo.yml
docker/example/observability/zkboost/: config.toml
docker/example/testnet/: .gitignore  README.md  docker-compose.yml  network_params.yaml  network_params_mixed_proof_gen_verify.yaml  start_local_testnet.sh  stop_local_testnet.sh
docker/example/testnet/config/: zkboost-server.toml  zkboost-server.toml.tmpl
docker/example/testnet/scripts/: network_params_mixed_proof_gen_verify.yaml  start_local_testnet.sh
docker/example/testnet/zkboost/: config.toml.tmpl
docker/grafana/: Dockerfile
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/prometheus/: Dockerfile
docker/zisk-cluster/: README.md  build-image.sh  config.toml  docker-compose.yml
docker/zisk-cluster/elf/: stateless-validator-reth-zisk
guest-programs/guest-lib/: Cargo.toml
scripts/: download-ere-guest.sh  network_params_simple.yaml  run_sentry.sh  test_workflow.sh
src/: common.rs  config.rs  mock_zkvm.rs
src/endpoints/: execute.rs  prove.rs
