[workspace]
members = [
    # zkboost
    "crates/zkboost/client",
    "crates/zkboost/server",
    "crates/zkboost/server-config",
    "crates/zkboost/types",
    # zkboost-ethereum
    "crates/zkboost-ethereum/el-config",
    "crates/zkboost-ethereum/el-input",
    "crates/zkboost-ethereum/el-relayer",
    "crates/zkboost-ethereum/el-types",

    "crates/execution-witness-sentry", "crates/zkboost/guest-loader",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
result_large_err = "allow"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
cargo_metadata = "0.19.0"
clap = "4.5"
flate2 = "1.1.5"
futures = "0.3"
indexmap = "2.12"
nix = "0.29"
reqwest = "0.12"
serde = "1.0"
serde_json = "1"
serde_with = "3.16"
serde_yaml = "0.9"
sha2 = "0.10.9"
strum = "0.27.2"
sysinfo = "0.37"
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2"
tokio = "1.48"
toml_edit = "0.24"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = "27"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
discv5 = "0.10"
url = "2.5.7"

# reth
reth-stateless = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241" }

# ere
ere-common = { git = "https://github.com/eth-act/ere", rev = "a9fb04dea82e658b900bf09fdf8a816fa4eec59b" }
ere-dockerized = { git = "https://github.com/eth-act/ere", rev = "a9fb04dea82e658b900bf09fdf8a816fa4eec59b" }
ere-server = { git = "https://github.com/eth-act/ere", rev = "a9fb04dea82e658b900bf09fdf8a816fa4eec59b" }
ere-zkvm-interface = { git = "https://github.com/eth-act/ere", rev = "a9fb04dea82e658b900bf09fdf8a816fa4eec59b" }

# ere-guests
stateless-validator-ethrex = { git = "https://github.com/eth-act/ere-guests", tag = "v0.2.0", features = ["host"] }
stateless-validator-reth = { git = "https://github.com/eth-act/ere-guests", tag = "v0.2.0", features = ["host"] }

# local
zkboost-client = { path = "crates/zkboost/client" }
zkboost-server = { path = "crates/zkboost/server" }
zkboost-server-config = { path = "crates/zkboost/server-config" }
zkboost-types = { path = "crates/zkboost/types" }
guest-loader = { path = "crates/zkboost/guest-loader" }

zkboost-ethereum-el-config = { path = "crates/zkboost-ethereum/el-config" }
zkboost-ethereum-el-input = { path = "crates/zkboost-ethereum/el-input" }
zkboost-ethereum-el-relayer = { path = "crates/zkboost-ethereum/el-relayer" }
zkboost-ethereum-el-types = { path = "crates/zkboost-ethereum/el-types" }
