[workspace]
members = [
    "crates/client",
    "crates/server",
    "crates/types",
    "crates/mock-zkattestor",
    "crates/guest-loader",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
result_large_err = "allow"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
bincode = "1.3.3"
bytes = "1"
clap = "4.5"
futures = "0.3"
lru = "0.12"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
rand = "0.9.2"
reqwest = "0.12"
reqwest-eventsource = "0.6"
serde = "1.0"
serde_json = "1"
sha2 = "0.10.9"
strum = "0.27.2"
thiserror = "2"
tokio = "1.48"
tokio-stream = "0.1"
tokio-util = "0.7"
toml_edit = "0.24"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.7"

# lighthouse
ethereum_serde_utils = "0.8.0"
lighthouse_types = { git = "https://github.com/sigp/lighthouse", branch = "unstable", package = "types" }
ssz = { package = "ethereum_ssz", version = "0.10" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.10" }
ssz_types = "0.14"
superstruct = "0.10"
tree_hash = "0.12"
tree_hash_derive = "0.12"

# alloy
alloy-eips = "1"
alloy-genesis = "1"
alloy-primitives = "1"
alloy-rpc-types-engine = "1"
alloy-rpc-types-eth = "1"

# reth
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0", default-features = false }
stateless = { git = "https://github.com/paradigmxyz/stateless", rev = "ed189a51931e8589102f3139d48fdbb3bbe4c1f7", default-features = false }

# ere
ere-server = { git = "https://github.com/eth-act/ere", tag = "v0.6.1" }
ere-zkvm-interface = { git = "https://github.com/eth-act/ere", tag = "v0.6.1" }

# ere-guests
stateless-validator-common = { git = "https://github.com/eth-act/ere-guests", tag = "v0.7.0" }
stateless-validator-ethrex = { git = "https://github.com/eth-act/ere-guests", tag = "v0.7.0", features = ["host"] }
stateless-validator-reth = { git = "https://github.com/eth-act/ere-guests", tag = "v0.7.0", features = ["host"] }

# local
zkboost-client = { path = "crates/client" }
zkboost-server = { path = "crates/server" }
zkboost-types = { path = "crates/types" }
zkboost-mock-zkattestor = { path = "crates/mock-zkattestor" }
