[package]
name = "execution-witness-sentry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Monitors execution layer nodes and fetches execution witnesses"

[dependencies]
alloy-provider = { version = "1", features = ["ws"] }
alloy-rpc-types-eth = "1"
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
flate2 = "1.1"
futures = "0.3"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = "2"

[lints]
workspace = true
