[package]
name = "execution-witness-sentry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
discv5.workspace = true
eventsource-client.workspace = true
flate2.workspace = true
futures.workspace = true
lru.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["base64"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
tokio-util.workspace = true
toml_edit = { workspace = true, features = ["serde"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true

alloy-genesis.workspace = true
alloy-provider = { workspace = true, features = ["ws"] }
alloy-rpc-types-debug.workspace = true
alloy-rpc-types-eth.workspace = true

reth-chainspec.workspace = true
reth-ethereum-primitives.workspace = true
reth-stateless.workspace = true

ere-common.workspace = true

zkboost-client.workspace = true
zkboost-ethereum-el-input.workspace = true
zkboost-ethereum-el-types.workspace = true
zkboost-types.workspace = true
