[package]
name = "mock-zkattestor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
reqwest-eventsource.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
ssz_types.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true

# lighthouse
ethereum_serde_utils.workspace = true
lighthouse_types.workspace = true

# local
zkboost-client.workspace = true
zkboost-types.workspace = true
