[package]
name = "zkboost-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
sysinfo.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tower-http = { workspace = true, features = ["trace", "limit"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wgpu.workspace = true

ere-dockerized.workspace = true
ere-zkvm-interface.workspace = true
zkboost-types.workspace = true
