[package]
name = "zkboost-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
lighthouse_types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }

# lighthouse
ssz.workspace = true
ssz_derive.workspace = true
ssz_types.workspace = true
superstruct.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

ere-catalog.workspace = true
