[package]
name = "guest-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
reth-stateless.workspace = true
reth-primitives-traits.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true

ethereum_ssz_derive = { workspace = true }
ethereum_ssz = { workspace = true }

anyhow.workspace = true
thiserror.workspace = true

ere-io.workspace = true
ere-platform-trait.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = []