[package]
name = "zkboost-ethereum-el-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
toml_edit = { workspace = true, features = ["serde"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

ere-common.workspace = true
ere-zkvm-interface.workspace = true

zkboost-ethereum-el-types.workspace = true
zkboost-server-config.workspace = true
