[package]
name = "zkboost-ethereum-el-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
ere-common.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
