[package]
name = "zkboost-ethereum-el-witness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reth-stateless.workspace = true
zkboost-ethereum-el-types.workspace = true
benchmark-runner.workspace = true
witness-generator.workspace = true
anyhow.workspace = true
