[package]
name = "guest-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
minisign-verify = "0.2"
reqwest = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }

[dev-dependencies]
minisign = "0.7"

[lints]
workspace = true
