[package]
name = "guest-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
minisign = "0.7"
reqwest = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"

[lints]
workspace = true
