[package]
name = "zkboost-server-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
toml_edit = { workspace = true, features = ["serde"] }

ere-dockerized.workspace = true
ere-zkvm-interface.workspace = true

zkboost-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }