[package]
name = "zkboost-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
futures.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
sysinfo.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace", "limit"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wgpu.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

ere-dockerized.workspace = true
ere-server.workspace = true
ere-zkvm-interface.workspace = true

zkboost-server-config.workspace = true
zkboost-types.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
flate2.workspace = true
nix = { workspace = true, features = ["signal", "process"] }
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
toml_edit.workspace = true

zkboost-client.workspace = true
zkboost-ethereum-el-config.workspace = true
zkboost-ethereum-el-input.workspace = true
zkboost-ethereum-el-types.workspace = true

[[test]]
name = "stateless_validator"
harness = false
test = false
